--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -28,7 +28,7 @@
 
     {% block head %}
 
-        <title>NoPassword</title>
+        <title>{{ APP_NAME }}</title>
 
         <meta name="description" content="">
 
@@ -52,7 +52,7 @@
             <div class="container">
                 <a data-target=".navbar-responsive-collapse" data-toggle="collapse"
                    class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span
-                        class="icon-bar"></span></a> <a href="#" class="brand">NoPassword</a>
+                        class="icon-bar"></span></a> <a href="#" class="brand">{{ APP_NAME }}</a>
 
                 <div class="nav-collapse collapse navbar-responsive-collapse">
                     <ul class="nav">
