--- a/src/web/templates/login.html
+++ b/src/web/templates/login.html
@@ -6,7 +6,7 @@
             <div class="well">
                 <h1>{% trans %}Login Message{% endtrans %}</h1>
                 <p>
-                    {% trans %} Check your email. NoPassword will send you a link so you can login.{% endtrans %}
+                    {% trans %} Check your email. {{ APP_NAME }} will send you a link so you can login.{% endtrans %}
                 </p>
             </div>
         </div>
