--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="hero-unit">
         <h1>
-            {% trans %} Login with NoPassword!{% endtrans %}
+            {% trans %} Password-less Login!{% endtrans %}
         </h1>
 
         <p>
@@ -11,8 +11,8 @@
         </p>
 
         <p>
-            {% trans %}Don't worry with hash, salt, captchas nor "forgot your password" anymore. Use NoPassword REST API
-                and focus on your awesome site! NoPassword is the lean approach for your login system.{% endtrans %}
+            {% trans %}Don't worry with hash, salt, captchas nor "forgot your password" anymore. Use {{ APP_NAME }} REST API
+                and focus on your awesome site! {{ APP_NAME }} is the lean approach for your login system.{% endtrans %}
         </p>
 
         <p>
@@ -26,7 +26,7 @@
             </h2>
 
             <p>
-                {% trans %}NoPassword is now a free service. More than that, it is Open Source.{% endtrans %}
+                {% trans %}{{ APP_NAME }} is now a free service. More than that, it is Open Source.{% endtrans %}
             </p>
 
             <p>
@@ -43,7 +43,7 @@
             </p>
 
             <p>
-                <a class="btn btn-success" href="#">{% trans %}Translate NoPassword{% endtrans %} »</a>
+                <a class="btn btn-success" href="#">{% trans %}Translate {{ APP_NAME }}{% endtrans %} »</a>
             </p>
         </div>
         <div class="span4">
