--- a/src/web/templates/sites.html
+++ b/src/web/templates/sites.html
@@ -10,21 +10,21 @@
                 <table class="table table-striped table-hover" contenteditable="true">
                     <thead>
                     <tr>
+                        <th>{% trans %}Id{% endtrans %}</th>
                         <th>{% trans %}Domain{% endtrans %}</th>
-                        <th>{% trans %}Login Redirect URL{% endtrans %}</th>
                         <th>{% trans %}Token{% endtrans %}</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
+                        <td>1</td>
                         <td>foo.com</td>
-                        <td>https://www.foo.com/login</td>
                         <td>987987erjljlerjjlker</td>
                     </tr>
 
                     <tr>
+                        <td>2</td>
                         <td>bar.com</td>
-                        <td>https://www.bar.com/login</td>
                         <td>987987erjljlerjjlker</td>
                     </tr>
                     </tbody>
