fixing home links

--- a/src/web/templates/api_home.html
+++ b/src/web/templates/api_home.html
@@ -25,7 +25,7 @@
             <h2>{% trans %}Table of Contents{% endtrans %}</h2>
             <ol>
                 <li><a href="#overview">{% trans %}Overview{% endtrans %}</a></li>
-                <li><a href="#table_summary">{% trans %}Summary{% endtrans %}</a></li>
+                <hli><a href="#table_summary">{% trans %}Summary{% endtrans %}</a></li>
                 <li><a href="#register-sites">{% trans %}Registering Sites{% endtrans %}</a></li>
             </ol>
         </div>
