--- a/src/web/templates/home.html
+++ b/src/web/templates/home.html
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="span4">
             <h2>
-                {% trans %}Free Service {% endtrans %}
+                {% trans %}Free and Open Source {% endtrans %}
             </h2>
 
             <p>
@@ -30,7 +30,7 @@
             </p>
 
             <p>
-                <a class="btn btn-success" href="https://github.com/renzon/nopasswd" target="_blank">{% trans %} Check on GitHub{% endtrans %} »</a>
+                <a class="btn btn-success" href="https://github.com/renzon/pswdless" target="_blank">{% trans %} Check on GitHub{% endtrans %} »</a>
             </p>
         </div>
         <div class="span4">
@@ -43,7 +43,7 @@
             </p>
 
             <p>
-                <a class="btn btn-success" href="#">{% trans %}Translate {{ APP_NAME }}{% endtrans %} »</a>
+                <a class="btn btn-success" href="/languages">{% trans %}Translate {{ APP_NAME }}{% endtrans %} »</a>
             </p>
         </div>
         <div class="span4">
@@ -56,7 +56,7 @@
             </p>
 
             <p>
-                <a class="btn btn-success" href="#">{% trans %} API Documentantion{% endtrans %} »</a>
+                <a class="btn btn-success" href="/api">{% trans %} API Documentantion{% endtrans %} »</a>
             </p>
         </div>
     </div>
