--- a/src/web/templates/languages.html
+++ b/src/web/templates/languages.html
@@ -20,7 +20,7 @@
                        href="https://github.com/renzon/pswdless/blob/master/i18n/locale/pt_BR/LC_MESSAGES/messages.po">pt_BR</a>
                     file as example.
                 </p>
-                <p>After finishing the translation, run make_file.py again so it all the information.</p>
+                <p>After finishing the translation, run make_file.py again to compile the new information.</p>
                 <p>If you become a translator and the {{ APP_NAME }} begin to charge for the service in the future, you will be on the VIP list so you will be able to use the service for free!</p>
             {% endtrans %}
 
