--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -92,7 +92,8 @@
                     <div class="pull-right">
                         <form class="form-inline" action="/login" method="post">
                             <div class="input-append" id="login_div">
-                                <input class="span2" type="text">
+                                <input class="span2" name="email" type="text">
+                                {{ xsrf_input() }}
                                 <button class="btn btn-success" type="submit">{% trans %}Login{% endtrans %}</button>
                             </div>
                         </form>
