--- a/src/web/templates/login.html
+++ b/src/web/templates/login.html
@@ -3,12 +3,15 @@
 {% block body %}
     <div class="row-fluid">
         <div class="span12">
-            <div class="well">
-                <h1>{% trans %}Login Message{% endtrans %}</h1>
-                <p>
-                    {% trans %} Check your email. {{ APP_NAME }} will send you a link so you can login.{% endtrans %}
-                </p>
-            </div>
+            <h1>{% trans %}Login Message{% endtrans %}</h1>
+
+            <p>
+                {% trans %} Check your email. {{ APP_NAME }} will send you a link so you can login.{% endtrans %}
+            </p>
+
+            <p>
+                {% trans %} Don't forget checking the spam box, once some email providers can automatically filter it.{% endtrans %}
+            </p>
         </div>
     </div>
 {% endblock %}
