homologing #23 - fixing logout button color

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -100,7 +100,7 @@
 
                                     {{ xsrf_input() }}
                                 <span class="input-xlarge uneditable-input">{{ current_user['email'] }}</span>
-                                    <button class="btn btn-success" type="submit">{% trans %}
+                                    <button class="btn btn-danger" type="submit">{% trans %}
                                         Logout{% endtrans %}</button>
                                 </div>
                             </form>
