--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>{{ APP_NAME }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -48,9 +49,9 @@
 
     {% block head %}
 
-        <title>{{ APP_NAME }}</title>
 
-        <meta name="description" content="">
+
+
 
 
 
@@ -99,7 +100,7 @@
                                 <div class="input-append">
 
                                     {{ xsrf_input() }}
-                                <span class="input-xlarge uneditable-input">{{ current_user['email'] }}</span>
+                                    <span class="input-xlarge uneditable-input">{{ current_user['email'] }}</span>
                                     <button class="btn btn-danger" type="submit">{% trans %}
                                         Logout{% endtrans %}</button>
                                 </div>
@@ -107,7 +108,7 @@
                         {% else %}
                             <form class="form-inline" action="/login" method="post">
                                 <div class="input-append">
-                                    <input class="span2" name="email" type="text"/>
+                                    <input class="span2" name="email" type="text" placeholder="{% trans %}Type your email{% endtrans %}"/>
                                     {{ xsrf_input() }}
                                     <button class="btn btn-success" type="submit">{% trans %}
                                         Login{% endtrans %}</button>
