Adding register link

--- a/src/web/templates/api_home.html
+++ b/src/web/templates/api_home.html
@@ -155,7 +155,7 @@
         <div class="span12">
             <h3>{% trans %}Registering Sites{% endtrans %}</h3>
 
-            <p>Prior to make API calls, you need to <a target="_blank">register</a> the site which you intend to
+            <p>Prior to make API calls, you need to <a target="_blank" href="/sites">register</a> the site which you intend to
                 use {{ APP_NAME }}.
                 After the registration, a token will be assigned to your site and it will be used on every call.
             </p>
