--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/static/img/favicon.ico" />
     <style>
         form.form-inline {
             margin: 0 0 0 0;
