Upgrade to new Tekton

--- a/backend/appengine/templates/api_home.html
+++ b/backend/appengine/templates/api_home.html
@@ -10,7 +10,7 @@
     }
   </style>
 {% endblock %}
-{% block navbar %}{{ select_navbar('API') }}{% endblock %}
+{% block navbar %}{{ select_tab('API') }}{% endblock %}
 {% block body %}
   <div class="container">
     <div class="row">
