--- a/src/web/templates/sites_mock.html
+++ b/src/web/templates/sites_mock.html
@@ -1,5 +1,5 @@
 {% extends "templates/base.html" %}
-{% block navbar %}{{ select_navbar('SITES') }}{% endblock %}
+{% block navbar %}{{ select_tab('SITES') }}{% endblock %}
 {% block head %}
     <style>
 
