--- a/backend/appengine/templates/languages.html
+++ b/backend/appengine/templates/languages.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% block navbar %}{{ select_navbar('LANGUAGES') }}{% endblock %}
+{% block navbar %}{{ select_tab('LANGUAGES') }}{% endblock %}
 {% block body %}
   <div class="container">
     <div class="row">
