--- a/backend/appengine/templates/sites_mock.html
+++ b/backend/appengine/templates/sites_mock.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% block navbar %}{{ select_navbar('SITES') }}{% endblock %}
+{% block navbar %}{{ select_tab('SITES') }}{% endblock %}
 {% block css %}
   <style>
 
