--- a/src/web/templates/api_home.html
+++ b/src/web/templates/api_home.html
@@ -10,7 +10,7 @@
         }
     </style>
 {% endblock %}
-{% block navbar %}{{ select_navbar('API') }}{% endblock %}
+{% block navbar %}{{ select_tab('API') }}{% endblock %}
 {% block body %}
     <div class="row">
         <div class="span12">
