--- a/src/web/templates/languages.html
+++ b/src/web/templates/languages.html
@@ -1,5 +1,5 @@
 {% extends "templates/base.html" %}
-{% block navbar %}{{ select_navbar('LANGUAGES') }}{% endblock %}
+{% block navbar %}{{ select_tab('LANGUAGES') }}{% endblock %}
 {% block body %}
     <div class="row">
         <div class="span12">
